--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                     <li> <a href="#work-grid">work</a></li>
                     <li> <a href="#gallery">gallery</a></li>
                     <li> <a href="#recent-jobs">recent jobs</a></li>
-                    <li> <a href="#">contact</a></li>
+                    <li> <a href="#Pricing">Princing</a></li>
+                    <li> <a href="#Contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -140,6 +141,65 @@
                     <p>You can also include a type attribute containing the MIME type of the resource, so a browser can
                         quickly see what resources are on offer, and ignore ones that it doesn’t support</p>
                 </article>
+            </div>
+        </div>
+    </section>
+
+    <section id="Pricing" class="white-bg section">
+        <div class="main-content top3-content">
+            <h2>Pricing</h2>
+            <p>The release of Apple Silicon-based Macs at the end of last year generated a flurry of news coverage and
+                some surprises at the machine’s performance. This post details some background information on the
+                experience of porting Firefox to run natively on these CPUs.</p>
+            <p>We’ll start with some background on the Mac transition and give an overview of Firefox internals that
+                needed to know about the new architecture, before moving on to the concept of Universal Binaries.</p>
+            <div class="responsive-table">
+                <table>
+                    <Caption>Pricing table</Caption>
+
+                    <thead>
+                        <Tr>
+                            <th>Title 1</th>
+                            <th>Title 2</th>
+                            <th>Title 3</th>
+                            <th>Title 4</th>
+                            <th>Title 5</th>
+                        </Tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Content 1</td>
+                            <td>Content 2</td>
+                            <td>Content 3</td>
+                            <td>Content 4</td>
+                            <td>Content 5</td>
+                        </Tr>
+                        <tr>
+                            <td>Content 1</td>
+                            <td>Content 2</td>
+                            <td>Content 3</td>
+                            <td>Content 4</td>
+                            <td>Content 5</td>
+                        </Tr>
+                        <tr>
+                            <td>Content 1</td>
+                            <td>Content 2</td>
+                            <td>Content 3</td>
+                            <td>Content 4</td>
+                            <td>Content 5</td>
+                        </Tr>
+                    </tbody>
+
+                    <tfoot>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>Testando</td>
+                        </tr>
+                    </tfoot>
+                </table>
             </div>
         </div>
     </section>
