--- a/index.html
+++ b/index.html
@@ -203,6 +203,56 @@
             </div>
         </div>
     </section>
+
+    <section id="Contact" class="intro main-bg section">
+        <div class="main-content intro-content contact-content">
+            <div class="intro-text-content">
+                <h2>January brings us Firefox 85</h2>
+                <p>To wrap up January, we are proud to bring you the release of Firefox 85. In this version we are
+                    bringing
+                    you support for the :focus-visible pseudo-class in CSS and associated devtools, and the complete
+                    removal
+                    of Flash support from Firefox.</p>
+            </div>
+            <div class="intro-img">
+                <img src="./assets/img/javascript.svg"
+                    alt="Na esqueda há um desenho de homem segurando a logo da linguagem de estilização CSS, no centro uma mulher de cabelos rosas, empurrando o logo da linguagem de programação Java Script, e na direita há uma mulher morena de terno rosa, segurando o logo da linguagem de marcação HTML">
+            </div>
+            <div class="contact-form">
+                <fieldset class="form-grid">
+                    <legend>Contact me</legend>
+
+
+                    <div class="form-group">
+                        <label for="first-name">First name</label>
+                        <input type="text" name="first-name" id="first-name" placeholder="Your first name">
+                    </div>
+                    <div class="form-group">
+                        <label for="last-name">Last name</label>
+                        <input type="text" name="last-name" id="last-name" placeholder="Your last name">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">E-mail</label>
+                        <input type="email" name="email" id="email" placeholder="Type your better e-mail">
+                    </div>
+                    <div class="form-group full-width">
+                        <label for="message">Message</label>
+                        <textarea name="message" id="message" cols="30" rows="10"
+                            placeholder="Text your message"></textarea>
+                    </div>
+                    <div class="form-group full-width">
+                        <button type="submit">Send message</button>
+                    </div>
+                </fieldset>
+            </div>
+        </div>
+    </section>
+
+    <footer id="footer" class="white-bg footer">
+        <p> <a rel="nofollow" target="_blank" href="#"> Feito com <span class="heart"> ❤ </span> por Marcelo
+                Guimarães </a></p>
+    </footer>
+
 </body>
 
 </html>
