--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             </h1>
             <nav>
                 <ul>
-                    <li> <a href="#intro">intro</a></li>
-                    <li> <a href="#work-grid">work</a></li>
-                    <li> <a href="#gallery">gallery</a></li>
-                    <li> <a href="#recent-jobs">recent jobs</a></li>
+                    <li> <a href="#intro">Intro</a></li>
+                    <li> <a href="#work-grid">Work</a></li>
+                    <li> <a href="#gallery">Gallery</a></li>
+                    <li> <a href="#recent-jobs">Recent jobs</a></li>
                     <li> <a href="#Pricing">Princing</a></li>
                     <li> <a href="#Contact">Contact</a></li>
                 </ul>
@@ -249,7 +249,7 @@
     </section>
 
     <footer id="footer" class="white-bg footer">
-        <p> <a rel="nofollow" target="_blank" href="#"> Feito com <span class="heart"> ❤ </span> por Marcelo
+        <p> <a rel="nofollow" target="_blank" href="https://github.com/MarceloCardoso98"> Feito com <span class="heart"> ❤ </span> por Marcelo
                 Guimarães </a></p>
     </footer>
 
