--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body class="main-bg">
 
-    <input id="close-menu" class="close-menu" type="checkbox" aria-label="Close menu" role="button">
+    <input id="close-menu" class="close-menu" type="checkbox" aria-label="Close menu" aria-pressed="true" role="button">
     <label class="close-menu-label" for="close-menu" title="close-menu"></label>
     <aside class="menu white-bg">
         <div class="main-content menu-content">
